    TODO: Create automated tests for command line tool using PlistBuddy etc.
    TODO: Implement new Table View interface (CSV output?)
    TODO: Make Droplet window & others larger
    TODO: Rewrite documentation for clarity
    TODO: Fix bug where custom icns file for icon doesn't work
    TODO: Async Status Menu script execution to prevent interface locking on main thread

    * Fixed exception when double-clicking bundled files header
    * Fixed bug where pressing "Clear" could cause program to crash
    * Implemented a REFRESH command to clear text output buffer and reset web view HTML
    * Moved documentation to Markdown format from HTML
    * Fixed issue where command line status in Prefs window failed to update after pressing install or uninstall
    * Various minor interface improvements

5.2
    * Platypus apps can now register as URL scheme handlers and receive opened URLs as arguments to script
    * Platypus apps can now accept dragged URLs
    * Platypus apps that accept dropped files now have an Open Recent menu
    * New syntax to create submenus in Status Menu interface type
    * Relative paths are now supported in Platypus Profiles, but only through manual editing. Platypus app and CLT still generate Profiles with absolute paths.
    * Platypus now warns about about identical file names in bundled files
    * Droplet apps now quit when their window is closed
    * Updated and improved example profiles demonstrating new features
    * Text in Platypus apps now has a minimum font size
    * The Platypus Profile format has changed slightly in this version, but old formats can still be read
    * Fixed annoying issue where status menu would render before receiving all script output
    * Fixed performance issue with printing many lines to text window. It is now very fast again.
    * Fixed issue where loading certain Example profiles would cause Platypus to crash
    * Fixed bug where "Use as template" was shown when Status Item mode was "Text"